# noisygames

./: .gitignore  LICENSE  README.md
analysis/: NaiveDeterministic.ipynb  StratVsRandom.ipynb  bargraphofiterstochastic.ipynb  initial_iter_work.ipynb  noisygamesutil.py
analysis/.ipynb_checkpoints/: NaiveDeterministic-checkpoint.ipynb  bargraphofiterstochastic-checkpoint.ipynb
analysis/figures/: PrisonersDilemmaPayoffMatrix.odg
lit/: LITERATURE.md
lit/devnotes/: Feb9th2022.txt
noisygames/: .Cargo.toml.un~  Cargo.toml  Cargo.toml~
noisygames/src/: .game.rs.un~  .main.rs.swp  .main.rs.un~  .player.rs.un~  .testbed.rs.un~  Game.rs  buildgame.rs  game.rs  game.rs~  main.rs  main.rs~  player.rs  player.rs.bak  player.rs~  strategies.rs  test_utilities.rs  testbed.rs  testbed.rs.bak  testbed.rs~
noisygames/src/noisemodels/: simplemodels.rs
