[package]
name = "noisygames"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.13.0"
rand = "0.8.4"
chrono = "0.4.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
itertools = "0.8.2"
itertools-num = "0.1.1"
